about and project pages - thumbnails now use the get_the_post_thumbnail function to allow for custom-cropped thumbnail images on the about and project pages. Slight styling tweaks to fix image cropping on larger viewports.

--- a/assets/sass/_single.scss
+++ b/assets/sass/_single.scss
@@ -51,7 +51,7 @@ body.single-project {
         position: absolute;
         transform: skew(12deg);
         height: auto;
-        left: 50%;
+        left: 55%;
         translate: -50%;
       }
     }
